--- a/app/css/index.css
+++ b/app/css/index.css
@@ -1,3 +1,5 @@
+@import "../fonts/iconfont/iconfont.css";
+
 *{
     margin: 0;
     padding: 0;
@@ -24,7 +26,20 @@
 .top-bar-expand{
     height: 60px;
     line-height:60px;
-    padding: 0 5px;
+    padding: 0 15px;
     background-color: #fff;
     border-bottom: solid 1px #e6e6e6;
+    min-width: 100px;
+
 }
+
+.top-bar-expand-span{
+    cursor: pointer;
+}
+
+.top-bar-expand i{
+    font-size:24px;
+
+}
+
+
