--- a/src/css/index.css
+++ b/src/css/index.css
@@ -45,17 +45,27 @@
 /*面包屑和历史tab start*/
 .header-operation{
     height: 35px;
-    line-height: 35px;
+ /*   line-height: 35px;*/
     background-color:#f5f4f4;
 }
 
+.header-operation:before {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+    /* border: 1px solid red;*/ /* so we can see what's going on */
+}
+
 .header-operation-breadcrumb {
+    vertical-align: middle;
     display: inline-block;
     min-width: 230px;
     padding-left: 10px;
 }
 
 .header-operation-history-tabs{
+    vertical-align: middle;
     display: inline-block;
 }
 
