--- a/src/css/index.css
+++ b/src/css/index.css
@@ -32,3 +32,22 @@
     user-select: none;
 
 }
+
+/*滚动条 start*/
+.scroll::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+}
+
+.scroll::-webkit-scrollbar-track-piece {
+    background: #f5f5f5;
+    -webkit-border-radius: 6px;
+}
+
+.scroll::-webkit-scrollbar-thumb
+{
+    border-radius: 10px;
+    /*-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);*/
+    background-color: #ccc;
+}
+/*滚动条 end*/
