--- a/src/css/index.css
+++ b/src/css/index.css
@@ -48,6 +48,6 @@
 {
     border-radius: 10px;
     /*-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);*/
-    background-color: #ccc;
+    background-color: #ddd;
 }
 /*滚动条 end*/
